# ctrlmap

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.ctrlmap_cache/: llm_cache.db
.github/: CODEOWNERS  SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
demo/frameworks/: pci_dss_v4_oscal.json
demo/output/: access_control_policy_chunks.jsonl  all_chunks.jsonl  data_protection_policy_chunks.jsonl  harmonized_controls.json  network_security_policy_chunks.jsonl  nist_mapping.md  nist_report.html  pci_mapping.json  pci_mapping.md  pci_report.html
docs/: architecture.md  index.md
docs/api/: eval.md  export.md  index.md  llm.md  map.md  models.md  parse.md
scripts/: demo.sh  generate_demo_pdfs.py  setup.sh
src/ctrlmap/: __init__.py  _console.py  _defaults.py  cli.py  eval_command.py  eval_ragas.py
src/ctrlmap/export/: __init__.py  _formatting.py  _io.py  csv_formatter.py  html_formatter.py  markdown_formatter.py  oscal_formatter.py
tests/: __init__.py  conftest.py
tests/evaluation/: __init__.py  conftest.py  eval_runner.py  model_compare.py  test_batch_evaluation_accuracy.py  test_batch_meta_classification.py  test_compliance_accuracy.py  test_end_to_end_scenario.py  test_faithfulness.py  test_meta_classification.py  test_relevance_accuracy.py  test_retrieval_precision.py
tests/fixtures/: compliance_eval_set.json  e2e_scenario.json  golden_dataset.json  meta_classification_eval_set.json  nist_800_53_subset.json  relevance_eval_set.json  test_chunks.jsonl
tests/integration/: __init__.py  test_harmonization.py  test_layout_parsing.py
tests/unit/: test_aggregate_rationales.py  test_batch_query.py  test_cache.py  test_chunker.py  test_cli.py  test_cluster.py  test_demo_fixtures.py  test_embedder.py  test_eval_cli.py  test_export.py  test_extractor.py  test_formatting.py  test_harmonize_cli.py  test_heuristics.py  test_hybrid_search.py  test_index_cli.py  test_map_cli.py  test_mapper.py  test_meta_requirements.py  test_models.py  test_multi_format_export.py  test_ollama_client.py  test_oscal.py  test_parse_cli.py  test_structured_output.py  test_vector_store.py
(+39 files in other folders)
