[project]
name = "ctrlmap"
version = "0.1.0"
description = "Privacy-preserving GRC automation CLI. Map internal policies to security frameworks using local LLMs. Zero data leaves your machine."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Josh Jones" },
]
keywords = ["grc", "compliance", "nist", "oscal", "privacy", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.10.0",
    "rich>=13.0.0",
    "PyMuPDF>=1.25.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.6.0",
    "ollama>=0.6.1",
]

[project.optional-dependencies]
eval = ["ragas>=0.2.0"]

[project.scripts]
ctrlmap = "ctrlmap.cli:app"

[project.urls]
Repository = "https://github.com/JoshDoesIT/ctrlmap"
Issues = "https://github.com/JoshDoesIT/ctrlmap/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctrlmap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "eval: non-deterministic evaluation tests requiring Ollama (deselect with '-m \"not eval\"')",
]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "ctrlmap.eval_ragas"
ignore_missing_imports = true
follow_imports = "skip"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]
